test/expected/xec_explain_ti.out
explain _Sat int x
        ^
9: error: "_Sat" requires either "_Accum" or "_Fract"
